--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ body {
     opacity: 1;
 }
 
-.fade{
+.fade-diff-box{
     -webkit-transition: opacity 3s; /* For Safari 3.1 to 6.0 */
     transition: opacity 3s;
     opacity: 0;
