added search bar for files and did some cleanup

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ body {
 .app-modal-window .modal-dialog {
     width: 1000px;
     height: 1000px;
+    top: 70px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
