--- a/views/statsTemplate.html
+++ b/views/statsTemplate.html
@@ -1,6 +1,7 @@
 <div google-chart chart="branchChart" on-ready="setToolTipChartPNG()" style="display: none"></div>
 <div google-chart chart="logicChart" on-ready="setToolTipChartPNG()" style="display: none"></div>
 <div google-chart chart="arithmeticChart" on-ready="setToolTipChartPNG()" style="display: none"></div>
+<div google-chart chart="movChart" on-ready="setToolTipChartPNG()" style="display: none"></div>
 <div google-chart chart="otherChart" on-ready="setToolTipChartPNG()" style="display: none"></div>
 
 <div class="modal-header">
