typo with function pagination

--- a/views/asm.html
+++ b/views/asm.html
@@ -60,7 +60,7 @@ ul{
         <!-- pagination -->
         <div>
           <div style="margin-left: 5px; margin-bottom: -5px">
-            <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
+            <pagination total-items="functionsList.length" ng-model="currentPageFunctions" max-size="5"
             boundary-links="true"
             items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
           </pagination>
